<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_account">My Account</string>
    <string name="my_order">My Orders</string>
    <string name="my_health_credit">My Health Credit</string>
    <string name="update_kyc">Update KYC</string>
    <string name="dealer_slip">Dealer Slip</string>
    <string name="ev_score">EV Score</string>

    <string name="terms_condition_message">By continuing you agree to our Terms and Conditions as well as our Privacy Policy</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="select_language">Select your language</string>

    <string name="user_name_placeholder" translatable="false">%1$s %2$s</string>
    <string name="user_account_phone_placeholder" translatable="false">%1$s </string>

    <string name="text_nearest_dealer">Nearest Dealer</string>
    <string name="text_nearest_partner">Nearest Partner</string>

    <string name="logout_title">You are attempting to logout from account.</string>
    <string name="logout_message">Are you sure?</string>


    <!--FAQ Questions-->
    <string name="faq_qus_1">What is E-SAVARI Rentals?</string>
    <string name="faq_qus_2">What does E-SAVARI Offer?</string>
    <string name="faq_qus_3">What are the documents required for applying the loan?</string>
    <string name="faq_qus_4">If i don\'t have one or more documents?</string>
    <string name="faq_qus_5">What will my limit be?</string>
    <string name="faq_qus_6">Where do you operate in India?</string>
    <string name="faq_qus_7">Does My CIBIL Score affects while applying for loan?</string>
    <string name="faq_qus_8">How much CIBIL Score is needed to avail the loan?</string>
    <string name="faq_qus_9">How many loans can I take?</string>
    <string name="faq_qus_10">Is it necessary to download the app to apply?</string>
    <string name="faq_qus_11">What happens to my documents and data if my loan is rejected?</string>
    <!--FAQ Answer-->
    <string name="faq_ans_1">E-SAVARI Rentals is a marketplace for digital lending in which consumer can get the opportunity to get a loan and lender will get so many leads at one place</string>
    <string name="faq_ans_2">E-SAVARI Offers a loan upto 5 lakhs</string>
    <string name="faq_ans_3">Basic KYC documents along with Bank Statement. These documents can be uploaded via E-SAVARI App.</string>
    <string name="faq_ans_4">You can write to support@esavari.in or you can call at 9303800246</string>
    <string name="faq_ans_5">it will be between 10000 to 5 lakh based on assessment of the amount of Debt that you can sustainably service.</string>
    <string name="faq_ans_6">We operate all over India. Anyone can apply for a loan from anywhere.</string>
    <string name="faq_ans_7">NO, I will not be affected . it will affect only after taking a loan if someone defaults on EMIs.</string>
    <string name="faq_ans_8">it depends on company to Company basis.</string>
    <string name="faq_ans_9">You can take as many loans as you want ,as long as you are within your credit limit.</string>
    <string name="faq_ans_10">Yes, to complete the application you need to download the E-SAVARI Rentals app from Google play store.</string>
    <string name="faq_ans_11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="frequently_asked_questions">Frequently\nAsked Questions</string>
    <string name="faq_message">Quick answers to questions you may have.</string>
    <string name="faq_footer_title">Can\'t find the answer you\'re looking for ?</string>
    <string name="faq_footer_message">If you can\'t find the answer to your question here, please don\'t hesitate to contact our customer support team. We\'re here to help!</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="go_to_map">Go to map</string>
    <string name="call">Call</string>
    <string name="theme_system_default">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="select_theme">Change application theme</string>

    <string name="text_name">Name</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_whatsapp_no">Whatsapp No</string>
    <string name="text_email_id">Email ID</string>
    <string name="text_same_as_mobile_no">Same as mobile no</string>
    <string name="phone_hint" translatable="false">9876543210</string>
    <string name="email_hint" translatable="false">example@email.com</string>
    <string name="text_remove">Remove</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="update_profile_image">Update account image</string>
    <string name="text_general">General</string>
    <string name="text_settings">Settings</string>
    <string name="text_services">Services</string>
    <string name="text_search">Search</string>
    <string name="learn_more"><u>Learn more...</u></string>
    <string name="calculate_ev_score">Calculate EV Score</string>
    <string name="your_ev_score">Your EV Score</string>
    <string name="user_id">User ID</string>
    <string name="ev_score_dialog_message">Can not generate your EV Score.</string>

    <string name="first_name_msg">Enter your first name</string>
    <string name="last_name_msg">Enter your last name</string>
    <string name="enter_valid_email_msg">Enter valid email</string>
    <string name="progress_updating_account">Updating account...</string>
    <string name="progress_updating_password">Updating password...</string>
    <string name="account_updated">Account updated</string>
    <string name="password_changed">Password changed successfully</string>
    <string name="old_password">Old password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_hint" translatable="false">* * * * * *</string>
    <string name="new_password">New password</string>
    <string name="text_change">Change</string>
    <string name="password_16_char">Password contains at least 8 characters and at most 16 characters.</string>
    <string name="password_not_matched">New password and confirm password did not match</string>
    <string name="old_password_not_matched">Old password is not correct.</string>
    <string name="old_password_empty">Enter your old password.</string>
    <string name="change_password">Change password</string>
    <string name="text_account_settings">Account settings</string>
    <string name="select_image_from">Select image from</string>
    <string name="account_image">Account image</string>
    <string name="image_removed">Image removed</string>

</resources>