<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.UpdatePasswordFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large"
            tools:context=".fragments.UserFragmentOne">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppHeadingMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldPassword"
                style="@style/TextInputOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppHeadingMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xx_large"
                android:text="@string/new_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPassword"
                style="@style/TextInputOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppHeadingMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:text="@string/confirm_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPassword"
                style="@style/TextInputOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonChange"
                style="@style/ButtonStyleDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/xx_large"
                android:layout_marginBottom="@dimen/full"
                android:text="@string/text_change" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>
